[package]
name = "jelly-fpga-loader"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ryuz/jelly-fpga-loader"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
#jelly-fpga-client = { path = "../jelly-fpga-client-rs" }
jelly-fpga-client = { git = "https://github.com/ryuz/jelly-fpga-client-rs.git", tag = "v0.1.0" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
